# agh-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml  docker-ci.yml  python-ci.yml
locales/: EN.yml  RU.yml
src/: __init__.py  config.py  handlers.py  models.py
src/agh_bot/: __main__.py  config.py  loader.py  models.py  router.py
src/agh_bot/features/: anecdotes.py  captcha.py
src/agh_bot/locales/: EN.yml  RU.yml
src/features/: anecdote.py  captcha.py
