[project]
name = "agh-bot"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "aiogram>=1.2.3",
    "croniter>=6.0.0",
    "i18nice[yaml]>=0.16.0",
    "peewee-aio[asyncpg]>=2.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.0.17",
    "types-croniter>=6.0.0.20250626",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
ignore = [
    "E712", # Avoid using `==` to compare boolean values
]

[tool.ruff.format]
quote-style = "double"
